src/test/ui/lifetimes/lifetime-doesnt-live-long-enough.stderr
error[E0309]: the parameter type `T` may not live long enough
  --> $DIR/lifetime-doesnt-live-long-enough.rs:18:5
   |
17 | struct List<'a, T: ListItem<'a>> {
   |                 -- help: consider adding an explicit lifetime bound `T: 'a`...
18 |     slice: &'a [T]
   |     ^^^^^^^^^^^^^^
   |
note: ...so that the reference type `&'a [T]` does not outlive the data it points at
  --> $DIR/lifetime-doesnt-live-long-enough.rs:18:5
   |
18 |     slice: &'a [T]
   |     ^^^^^^^^^^^^^^

error[E0310]: the parameter type `T` may not live long enough
  --> $DIR/lifetime-doesnt-live-long-enough.rs:28:5
   |
27 | struct Foo<T> {
   |            - help: consider adding an explicit lifetime bound `T: 'static`...
28 |     foo: &'static T
   |     ^^^^^^^^^^^^^^^
   |
note: ...so that the reference type `&'static T` does not outlive the data it points at
  --> $DIR/lifetime-doesnt-live-long-enough.rs:28:5
   |
28 |     foo: &'static T
   |     ^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

